--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -1,20 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: ray
+  name: stuhard
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: ray
+      app: stuhard
   template:
     metadata:
       labels:
-        app: ray
+        app: stuhard
     spec:
       containers:
-      - image: okteto.dev/ray:latest
-        name: ray
+      - image: okteto.dev/stuhard:latest
+        name: stuhard
         ports:
         - containerPort: 8080
         env:
@@ -23,12 +23,12 @@ spec:
         - name: ProxySite
           value: "$ProxySite"
         - name: Vless_UUID
-          value: "$Vless_UUID"
+          value: "53ea9377-6a57-47d3-ac64-34dbc57caacf"
         - name: Vless_Path
-          value: "$Vless_Path"
+          value: "/s233"
         - name: Vmess_UUID
-          value: "$Vmess_UUID"
+          value: "db7c22d7-dfa3-47db-8b3c-7c88fadcc94a"
         - name: Vmess_Path
-          value: "$Vmess_Path"
+          value: "/s244"
         - name: Share_Path
-          value: "$Share_Path"
+          value: "/share233"
