--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -21,7 +21,7 @@ spec:
         - name: PORT
           value: "8080"
         - name: ProxySite
-          value: "$ProxySite"
+          value: "mirror.umd.edu"
         - name: Vless_UUID
           value: "53ea9377-6a57-47d3-ac64-34dbc57caacf"
         - name: Vless_Path
